--- a/preact/app/index.html
+++ b/preact/app/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <script type="module">
-    import { App, preact } from "./trinity.bundle.js"
+    import { App, preact } from "./app.bundle.js"
     const { html, render } = preact
     console.log(preact)
     const appData = {
